--- a/javaProcessing/index.html
+++ b/javaProcessing/index.html
@@ -14,54 +14,18 @@
 			<div class="dropdown">
         <!--Vincent-->
 				<button class="dropbtn" onclick="window.location.href='/people/vincent/vincent.html'">>Vincent</button>
-            <div class="dropdown-content">
-              <a href="/people/vincent/vincent_test.html" class="rcorners">Chapter 1</a>
-              <a href="#" class="rcorners">Chapter 2</a>
-              <a href="#" class="rcorners">Chapter 3</a>
-              <a href="#" class="rcorners">Chapter 4</a>
-              <a href="#" class="rcorners">Chapter 5</a>
-              <a href="#" class="rcorners">Chapter 6</a>
-              </div>
-            </div>
-            <div class="dropdown">
-              <!--Ruben-->
-               <button class="dropbtn" onclick="window.location.href='/people/ruben/ruben.html'">>Ruben</button>
-            <div class="dropdown-content">
-              <a href="#" class="rcorners">Chapter 1</a>
-              <a href="#" class="rcorners">Chapter 2</a>
-              <a href="#" class="rcorners">Chapter 3</a>
-              <a href="#" class="rcorners">Chapter 4</a>
-              <a href="#" class="rcorners">Chapter 5</a>
-              <a href="#" class="rcorners">Chapter 6</a>
-              </div>
             </div>
             <div class="dropdown">
               <!-- Caspar-->
-               <button class="dropbtn" onclick="window.location.href='/people/caspar/caspar.html'" >
-                 >Caspar
-               </button>
-               </button>
-            <div class="dropdown-content">
-              <a href="/people/caspar/chapter1.html" class="rcorners">Chapter 1</a>
-              <a href="/people/caspar/chapter2.html" class="rcorners">Chapter 2</a>
-              <a href="/people/caspar/chapter3.html" class="rcorners">Chapter 3</a>
-              <a href="/people/caspar/chapter4.html" class="rcorners">Chapter 4</a>
-              <a href="/people/caspar/chapter5.html" class="rcorners">Chapter 5</a>
-              <a href="/people/caspar/chapter6.html" class="rcorners">Chapter 6</a>
-              </div>
+            <button class="dropbtn" onclick="window.location.href='/people/caspar/caspar.html'">>Caspar</button>
+            </div>
+            <div class="dropdown">
             </div>
             <div class="dropdown">
               <!--Raphael-->
                <button class="dropbtn" onclick="window.location.href='/people/raphael/raphael.html'" >>Raphael</button>
                </button>
-            <div class="dropdown-content">
-              <a href="people/raphael/chapter1.html" class="rcorners">Chapter 1</a>
-              <a href="#" class="rcorners">Chapter 2</a>
-              <a href="#" class="rcorners">Chapter 3</a>
-              <a href="#" class="rcorners">Chapter 4</a>
-              <a href="#" class="rcorners">Chapter 5</a>
-              <a href="#" class="rcorners">Chapter 6</a>
-              </div>
+            
             </div>
         </ul>
     </nav>
@@ -89,7 +53,10 @@
          <!-- Text -->
         <h2>void lerntagebuch(javaProcessing){<br>
             <p>
-                <span class="yellow">String </span> s = <span class="green">"Willkommen zu unserem Java-Processing Lerntagebuch! Hoffentlich haben sie einen Kaffee bereit!";</span>
+                <span class="yellow">String </span> s = <span class="green">"Willkommen zu unserem Java-Processing Lerntagebuch! Hoffentlich haben sie einen Kaffee bereit! <br>
+                Diese Website haben wir erstellt, weil wir Web-Development ausprobieren wollten und gleichzeitig das Lerntagebuch machen sollten. <br>
+                Viel Spaß!" <a href="https://github.com/CasCodes/ProcessingWeb" target="_blank" rel="noopener noreferrer" >github</a>
+                </span>;
             </p>
         
         }</h2>
@@ -107,3 +74,18 @@
 </center>
 </body>
 </html>
+
+<!--
+       ________________________________         
+      /                                "-_          
+     /      .  |  .                       \          
+    /      : \ | / :                       \         
+   /        '-___-'                         \      
+  /_________________________________________ \      
+       _______| |________________________--""-L 
+      /       F J                              \ 
+     /       F   J                              L
+    /      :'     ':     orion                   F
+   /        '-___-'                            / 
+  /_________________________________________--"  
+-->
