--- a/javaProcessing/people/caspar/caspar.html
+++ b/javaProcessing/people/caspar/caspar.html
@@ -78,7 +78,10 @@
   <!-- ABOUT content -->
   <h1>Caspar;</h1>
   <img src="pixelCas_Blue.png" alt="Caspar" style="width: 200px;">
-    <p>Github: <span class="yellow"> CasCodes</span></p>
+    <p>Github: <span class="yellow"><a href="https://github.com/CasCodes" style="color:#BFBFBF;">
+      <span class="p">CasCodes</span>
+      </a></p>
+  <div style="padding-left:200px;padding-right:200px;">
   <h2>void about(me){</h2>
     <p>Moin, ich bin Caspar Pagel. <br> Zusammen mit Vincent  habe ich diese Website als Lerntagebuch gemacht. Das war unser erster Versuch im Web-Development, also ist die Seite nicht genau so geworden wie wir es uns vorgestellt haben, wir sind aber dennoch zufrieden.
      Im Lernpfad bin ich bis Aufgabe 6.5a gekommen und Processing zu lernen war definitv interssant. <br>Meiner Meinung nach hat Processing einige Ähnlichkeiten mit C, was mir durch Vorerfahrungen einiges erleichtert hat.
@@ -93,6 +96,7 @@
     "Jede Lösung führt zu einer Reihe neuer Probleme" (die Bilder bei Space Invaders und Pong laden nicht  ):
     </p>
   <h2>}</h2>
+  </div>
 
 
     <!--Floating Home Button-->
