updated pong arcade

--- a/javaProcessing/pong_arcade/pong_arcade.html
+++ b/javaProcessing/pong_arcade/pong_arcade.html
@@ -14,26 +14,6 @@
 			<div class="dropdown">
         <!--Vincent-->
 				<button class="dropbtn" onclick="window.location.href='/people/vincent/vincent.html'">>Vincent</button>
-            <div class="dropdown-content">
-              <a href="#" class="rcorners">Chapter 1</a>
-              <a href="#" class="rcorners">Chapter 2</a>
-              <a href="#" class="rcorners">Chapter 3</a>
-              <a href="#" class="rcorners">Chapter 4</a>
-              <a href="#" class="rcorners">Chapter 5</a>
-              <a href="#" class="rcorners">Chapter 6</a>
-              </div>
-            </div>
-            <div class="dropdown">
-              <!--Ruben-->
-               <button class="dropbtn" onclick="window.location.href='/people/ruben/ruben.html'">>Ruben</button>
-            <div class="dropdown-content">
-              <a href="#" class="rcorners">Chapter 1</a>
-              <a href="#" class="rcorners">Chapter 2</a>
-              <a href="#" class="rcorners">Chapter 3</a>
-              <a href="#" class="rcorners">Chapter 4</a>
-              <a href="#" class="rcorners">Chapter 5</a>
-              <a href="#" class="rcorners">Chapter 6</a>
-              </div>
             </div>
             <div class="dropdown">
               <!-- Caspar-->
@@ -115,3 +95,17 @@
 </body>
 </html>
 
+<!--
+       ________________________________         
+      /                                "-_          
+     /      .  |  .                       \          
+    /      : \ | / :                       \         
+   /        '-___-'                         \      
+  /_________________________________________ \      
+       _______| |________________________--""-L 
+      /       F J                              \ 
+     /       F   J                              L
+    /      :'     ':     orion                   F
+   /        '-___-'                            / 
+  /_________________________________________--"  
+-->
